py_bindings/errs

warning: unused `std::result::Result` which must be used
 --> src/lib.rs:8:1
  |
8 | #[py::modinit(_helloworld)]



error[E0308]: mismatched types
 --> src/lib.rs:8:1
  |
8 | #[py::modinit(_helloworld)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected tuple, found struct `pyo3::PyIterator`
  |
  = note: expected type `(isize, isize)`
             found type `pyo3::PyIterator<'_>`

error: aborting due to previous error
